--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,7 +5,7 @@ dependencies:
   flutter:
     sdk: flutter
   path_provider: ^1.1.0
-  file: ^5.0.4
+  file: ^6.0.0-nullsafety.2
 
 
 dev_dependencies:
